@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii check_ssl_cert.1
 .\"
-.TH "check_ssl_cert" 1 "February, 2021" "1.137.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "February, 2021" "1.138.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -116,6 +116,9 @@ do not check for signed certificate timestamps (SCT)
 .TP
 .BR "   --ignore-ssl-labs-cache"
 Forces a new check by SSL Labs (see -L)
+.TP
+.BR "   --ignore-tls-renegotiation"
+Ignores the TLS renegotiation check
 .TP
 .BR "   --issuer-cert-cache" " dir"
 directory where to store issuer certificates cache
