@@ -1,3 +1,4 @@
+2021-02-24 Version 1.138.0: Checks for TLS renegotiation
 2021-02-18 Version 1.137.0: Added  the --url option to specify the URL for the HTTP request
 2021-02-16 Version 1.136.0: Fixed the signed certificate timestamps spelling (command line option)
 2021-01-28 Version 1.135.0: Checks for signed certificate timestamps (SCTs)
