@@ -1,3 +1,7 @@
+2021-02-24  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert (main): Check for TLS renegotiation
+
 2021-02-19  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert (main): Do not reset $OPENSSL so that a different
